# quiz-app

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
config/: base.py
scripts/: create_databases.sql
src/: main.py
src/api/: dependencies.py
src/api/v1/: quiz_routers.py
src/database/: dependencies.py
src/database/postgres/: core.py  handler.py
src/models/: quiz_models.py
src/schemas/: quiz_schemas.py
src/utils/: exceptions.py
tests/: conftest.py
tests/api/v1/: test_quiz_routers.py
tests/database/postgres/: test_core.py  test_handler.py
